--- a/vinculo.html
+++ b/vinculo.html
@@ -6,7 +6,26 @@
     <title>Ejemplo de anclas y Hioervinculos</title>
 </head>
 <body>
-    <h1>Ejemplos de anclas y hipervinculos</h1>
-    
+    <h1>Ejemplos 1</h1>
+    <!--hipervinculo-->
+    <nav>
+        <ul>
+            <li><a href="#secccion1">Ir a seccion1</a></li>
+            <li><a href="#secccion2">Ir a seccion2</a></li>
+            
+        </ul>
+    </nav>
+    <!--secciones con anclas-->
+    <section id="seccion">
+        <h2>seccion 1</h2>
+        <p>contenido de la secccion 1.</p>
+    </section>
+
+    <section id="secccion2">
+        <h2>seccion 2</h2>
+        <p>contenido de la seccion</p>
+    </section>
+    <h1>3142101</h1>
+    <h1>balantaj675@gmail.com</h1>
 </body>
 </html>
