--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     </style>
 </head>
 <body>
+    <h1>jhonatan felipe</h1>
+    <h1>calambas balanta</h1>
+    <h1>3233596491</h1>
     <h1>pagina prinsipal</h1>
     <p>vienbenido a la pagina prinsipal.pudes ir a la pagina secundaria haciendo clic en el siguiente enlace</p>
     <a href="pagina html.pagina secundaria"> Ir a la pagina secundaria/a>
