pagina_secundaria.html

--- a/pagina_secundaria.html
+++ b/pagina_secundaria.html
@@ -12,6 +12,9 @@
     </style>
 </head>
 <body>
+    <h1>jhoanatan felipe calambas balanta</h1>
+    <h1>3233596491</h1>
+    <h1>1059597526</h1>
     <h1>pagina secundaria</h1>
     <p>esta es la pagina secundaria para bolver a la pagian principal haciendo cilc en el siguiente enlace</p>
     <a href="index.html">volver a la pagina principal</a>
