--- a/info.html
+++ b/info.html
@@ -3,17 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Datos</title>
+    <title>Document</title>
 </head>
 <body>
-    <h1>jhonatan felipe</h1>
-
-    <h1>calambas balanta</h1>
-
-    <h1>popayan</h1>
-
-    <h1>323596491</h1>
-
-    <h1>balantaj675@gmail.com</h1>
+    <h1>informacion</h1>
+    <h2>Yair Daniel </h2>
+    <h2>muños velasco</h2>
+    <h2>3135372211</h2>
+    <h2>coconucos</h2>
+    
 </body>
 </html>
